VIITE-3259 fix too high table frame

--- a/viite-UI/src/less/site/project-change-table.less
+++ b/viite-UI/src/less/site/project-change-table.less
@@ -1,14 +1,12 @@
 /* General table wrapper */
 .change-table-frame {
+  display: inline-block;
+  min-width: 1050px;
   position: absolute;
   background-color: #e3e3e1;
   z-index: 2020;
   border: 2px solid #282826;
   border-radius: 3px;
-  min-width: 1050px;
-  min-height: 117px;
-  width: 50vw;
-  font-family: Arial, sans-serif;
   overflow-x: auto;
 }
 
@@ -46,12 +44,6 @@
 .btn-icon {
   margin-left: 5px;
   cursor: pointer;
-}
-
-/* Table body */
-.change-table-dimension-headers {
-  max-height: 300px;
-  overflow-y: auto;
 }
 
 .change-table-dimensions {
